# movie_recommendation

./: .gitignore  .pylintrc  README.md  checks.sh  features_eda.ipynb  pyproject.toml  pytest.ini  tmp.ipynb  train.py
.github/workflows/: lint.yml  lint.yml  # GitHub Actions for linting  python-app.yml  python-app.yml  # GitHub Actions for tests  test.yml
data/: README.md  README.md  # Instructions to download dataset as zip from webpage
prepare_data/: README.md  clean.py  config.py  download.py  download_dataset.py  features.py  main.py
prepare_data/tests/: test_download_dataset.py
ranker_model_training/: train_ranker.py
retrieval_model_training/data/: __init__.py  features_module.py  ratings_dataset.py  ratings_module.py
retrieval_model_training/lit_models/: __init__.py  base_model.py  lit_factorization.py  lit_neural_collaborative_filtering.py  lit_two_tower.py
retrieval_model_training/models/: __init__.py  neural_collaborative_filtering.py  two_tower.py
src/: __init__.py  model.py  train.py
src/data/: __init__.py  base_module.py  data_module.py  dataset.py  features_dataset.py  features_module.py  ratings_dataset.py  ratings_module.py  utils.py
src/lit_model/: recommender.py
src/lit_models/: __init__.py  base_model.py  lit_factorization.py  lit_two_tower.py  recommender.py
src/models/: __init__.py  embedding_model.py  factorization.py  two_tower.py
src/prepare_data/: download_dataset.py  features.py
src/utils/: features.py  log.py
tests/: __init__.py  mocking.py  test_data_cleaning.py  test_data_module.py  test_data_utils.py  test_dataset.py  test_download_dataset.py  test_embedding_model.py  test_feature_calcualtion.py  test_features.py  test_lit_base.py  test_lit_factorization.py  test_lit_two_tower.py  test_model.py  test_recommender.py  test_train.py  test_two_tower.py  test_utils.py
tests/fixtures/: README.md  movies.csv  ratings.csv  ratings_sample_100.csv
training/: train.py
utils/: data.py
