[tool.poetry]
name = "movie-recommendation-system"
version = "0.1.0"
description = "A movie recommendation system trained using PyTorch Lightning"
authors = ["Erik Grip <erik.grip@outlook.com>"]

[tool.poetry.dependencies]
python = "3.11.7"
torch = "^2.3"
pytorch-lightning = "^2.3"

[tool.poetry.dev-dependencies]
black = "^24.4"
pytest = "^8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"