[tool.poetry]
name = "movie-recommendation-system"
version = "0.1.0"
description = "A movie recommendation system trained using PyTorch Lightning"
authors = ["Erik Grip <erik.grip@outlook.com>"]

[tool.poetry.dependencies]
pandas = { version = "^2.2", extras = ["parquet"] }
python = "3.11.7"
pytorch-lightning = "^2.3"
scikit-learn = "^1.5"
sentence-transformers = "^3.3"
tensorboard = "^2.17"
torch = "^2.7"
torchmetrics = "^1.4"

[tool.poetry.dev-dependencies]
black = "*"
ipykernel = "*"
isort = "*"
mypy = "*"
pandas-stubs = "*"
polars = "*"
pylint = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"